--- a/500.html
+++ b/500.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>500页面</title>
+    <title>500-www.eonew.cn</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         img{
